fixed issue with picture not showing on IE and Firefox

--- a/docs/_sass/jekyll-theme-cayman.scss
+++ b/docs/_sass/jekyll-theme-cayman.scss
@@ -325,17 +325,66 @@ a {
   }
 }
 
+#container {
+  position: relative;
+  width: 100%;
+}
+
+#container::before {
+  @include large {
+    content: "";
+    display: block;
+    padding-top: 58.77%;
+  }
+
+  @include medium {
+    content: "";
+    display: block;
+    padding-top: 58.77%;
+  }
+
+  @include small {
+    content: "";
+    display: block;
+    padding-top: 51.32%
+  }
+}
+
 .shifty-screenshot {
   @include large {
     content: url("/images/shifty-screenshot-large.png");
+    background-image: url("/images/shifty-screenshot-large.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   @include medium {
     content: url("/images/shifty-screenshot-large.png");
+    background-image: url("/images/shifty-screenshot-large.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   @include small {
     content: url("/images/shifty-screenshot-small.png");
+    background-image: url("/images/shifty-screenshot-small.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 }
 
